--- a/Presentacion1/slides/antecedentes.tex
+++ b/Presentacion1/slides/antecedentes.tex
@@ -1,5 +1,10 @@
 \begin{frame}{\color{blue}Antecedentes}
 
+  \note{
+    Hablar de los antecedentes en robotica,
+    evolucion a robotica de servicios
+  }
+  
   \begin{itemize}
     \item A \alert{highlighted} bulleted item
       \pause
@@ -10,13 +15,5 @@
       \end{itemize}
     \item And another, at the top level, with \textit{italic} text
   \end{itemize}
-
-  \begin{block}{Remark}
-    Sample text
-  \end{block}
   
-  \note{
-    Here's a note for this slide.
-  }
-
 \end{frame}
