--- a/Presentacion1/slides/enfoque_propuesto.tex
+++ b/Presentacion1/slides/enfoque_propuesto.tex
@@ -1,21 +1,34 @@
-\begin{frame}{A slide with some text and a link}
+\begin{frame}{\color{blue}Enfoque propuesto}
 
+  %bartolomei
+  %https://www.research-collection.ethz.ch/bitstream/handle/20.500.11850/620637/bartolomei_ral2023.pdf?sequence=1&isAllowed=y
+
+  %racer
+  %https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10038280
+  
+  %Enfoque propuesto
+
+  % proveer la justificación de los metodos utilizados
+  % marco experimental
+  % La forma de cómo se evaluará el enfoque propuesto
+  % Contra que técnicas/metodologias se compararán los resultados
+  
   \begin{itemize}
-    \item This slide has some text along with a link
-      \begin{itemize}
-        \item \textbf{Some bold text}: followed by an explanation
-        \item \textbf{More bold text}: followed by more text
-      \end{itemize}
-    \item Another bullet, with sub-bullets
-      \begin{itemize}
-        \item A sub-bullet
-        \item Another sub-bullet, with more text
-      \end{itemize}
+  \item This slide has some text along with a link
+    \begin{itemize}
+    \item \textbf{Some bold text}: followed by an explanation
+    \item \textbf{More bold text}: followed by more text
+    \end{itemize}
+  \item Another bullet, with sub-bullets
+    \begin{itemize}
+    \item A sub-bullet
+    \item Another sub-bullet, with more text
+    \end{itemize}
   \end{itemize}
-
+  
   \vspace{2ex}
   \begin{center}
     \color{blue} \href{https://github.com/anishathalye/auriga}{github.com/anishathalye/auriga}
   \end{center}
-
+  
 \end{frame}
