--- a/Presentacion1/slides/hipotesis.tex
+++ b/Presentacion1/slides/hipotesis.tex
@@ -1,7 +1,7 @@
-\begin{frame}{A slide with centered text}
-
+\begin{frame}{\color{blue}Hipótesis}
+  
   \begin{center}
-    Some statement that is centered.
+    Poner la hipótesis acá
   \end{center}
 
   \vspace{2ex}
