--- a/Presentacion1/slides/motivaciones.tex
+++ b/Presentacion1/slides/motivaciones.tex
@@ -1,4 +1,9 @@
-\begin{frame}{A 50-50 split slide}
+\begin{frame}{\color{blue}Motivaciones}
+  
+  \note{
+    https://ccc.inaoep.mx/~emorales/Papers/2009/eduardo.pdf
+    Hablar de la importancia de construir software para robots
+  }
 
   \begin{columns}
     \begin{column}{0.5\linewidth}
