--- a/Presentacion1/slides/planteamiento_problema.tex
+++ b/Presentacion1/slides/planteamiento_problema.tex
@@ -1,5 +1,5 @@
-\begin{frame}{Full-slide figure}
-
+\begin{frame}{\color{blue}Planteamiento del problema}
+  
   \begin{figure}
     \centering
     \begin{tikzpicture}[scale=0.7]
@@ -17,6 +17,4 @@
     \end{tikzpicture}
     \caption{The figure's caption}
   \end{figure}
-
-
 \end{frame}
