--- a/Presentacion1/slides/preguntas_investigacion.tex
+++ b/Presentacion1/slides/preguntas_investigacion.tex
@@ -1,23 +1,21 @@
-\begin{frame}[fragile]{A slide with some code}
+\begin{frame}{\color{blue}Preguntas de investigación}
 
-	\begin{columns}
-		\begin{column}{0.5\linewidth}
-			\footnotesize
-			\begin{Verbatim}[commandchars=\\\{\}]
-/* some code */
-def foo(x):
-  return x**0.5 + 2*x
+  \begin{itemize}
+  \item Pregunta 1\\  %{\color{gray} [Some citation]}
+  \item Pregunta 2\\  %{\color{gray} [Another citation]}
+  \item Pregunta 3\\  %{\color{gray} [Another citation]}
+  \end{itemize}
 
-\color{blue}/* some can be highlighted */
-\color{blue}foo(3)
-      \end{Verbatim}
-    \end{column}
-    \begin{column}{0.5\linewidth}
-      {\color{red} Some explanatory text, in red, with some \texttt{monospace} text.}
-      There might be some math, too:
-
-      $$\sqrt{x} + 2x$$
-    \end{column}
-  \end{columns}
+  %\begin{columns}
+  %  \begin{column}{0.5\linewidth}
+  %    \footnotesize
+  %    Hola mundo
+  %  \end{column}
+  %  \begin{column}{0.5\linewidth}
+  %    {\color{red} Some explanatory text, in red, with some \texttt{monospace} text.}
+  %    There might be some math, too:   
+  %    $$\sqrt{x} + 2x$$
+  %  \end{column}
+  %\end{columns}
 
 \end{frame}
