--- a/presentacion_dos/presentacion/test.bib
+++ b/presentacion_dos/presentacion/test.bib
@@ -1,3 +1,13 @@
+@book{murphy2000,
+author = {Murphy, Robin R.},
+title = {Introduction to AI Robotics},
+year = {2000},
+isbn = {0262133830},
+publisher = {MIT Press},
+address = {Cambridge, MA, USA},
+edition = {1st}
+}
+
 @ARTICLE{OMNI2022,
   author={Xu, Hao and Zhang, Yichen and Zhou, Boyu and Wang, Luqi and Yao, Xinjie and Meng, Guotao and Shen, Shaojie},
   journal={IEEE Transactions on Robotics}, 
